--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
   background-image: url(/img/palais-tokyo.jfif);
-  background-size: cover;
-  
-  background-attachment: fixed;
+  background-position: top, center;
+  background-origin: border-box
+
 }
 
 header {
@@ -11,30 +11,30 @@ header {
   flex-direction: column;
   text-align: center;
   color: white;
+  font-family: "Bungee Shade";
+  font-size: 50px;
+  text-shadow: 1px 5px 5px black;
 }
 
 #start {
-  display: block;
-  margin: 5% 45%;
+  margin: 0% 45%;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(4px);
+  border-radius: 25px;
+  box-shadow: 0px 0px 5px 5px rgb(0, 0, 0)
+}
+#restart {
+  display: none;
+  margin: 0% 45%;
   background-color: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(4px);
   border-radius: 25px;
   box-shadow: 0px 0px 5px 5px rgb(0, 0, 0)
 }
 
-h2 {
-  font-size: 20px;
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
-  border-radius: 10px;
-  max-width: 600px;
-  margin: auto;
-  text-align: center;
-}
-
 #wordDisplay {
-  font-size: 30px;
-  letter-spacing: 10px;
+  font-size: 50px;
+  letter-spacing: 5px;
   margin-top: 20px;
 }
 
@@ -44,10 +44,13 @@ h2 {
 
 #gameContainer {
   display: none;
+  justify-content: center;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
   border-radius: 10px;
-  max-width: 600px;
+  max-width: 1000px;
   margin: auto;
   text-align: center;
+  font-family: "Lexend";
 }
